# movdata

./: README.md  pyproject.toml
data/movies/dynamic/year=2015/data.json/: .part-00000-9fad9474-bf5a-42d9-badc-59fc0ce29c50-c000.snappy.parquet.crc  .part-00000-c64585f6-f96f-45ae-b7db-7f6d1b8d4b24-c000.snappy.parquet.crc  part-00000-9fad9474-bf5a-42d9-badc-59fc0ce29c50-c000.snappy.parquet  part-00000-c64585f6-f96f-45ae-b7db-7f6d1b8d4b24-c000.snappy.parquet
data/movies/dynamic/year=2015/data.parquet/: .part-00000-1d750b12-f3a1-4712-85eb-a7f3e6992814-c000.snappy.parquet.crc  part-00000-1d750b12-f3a1-4712-85eb-a7f3e6992814-c000.snappy.parquet
src/movdata/: ml.py  mlinfo.py
tests/: test_ml.py
